--- a/css/bootswatch-sandstone.css
+++ b/css/bootswatch-sandstone.css
@@ -900,6 +900,18 @@ progress {
   --bs-gutter-y: 3rem;
 }
 
+
+.g-6,
+.gx-6 {
+  --bs-gutter-x: 5.5rem;
+}
+
+.g-6,
+.gy-6 {
+  --bs-gutter-y: 5.5rem;
+}
+
+
 @media (min-width: 576px) {
   .col-sm {
     flex: 1 0 0%;
